# arcaea_wiki_data

./: .gitignore  .gitmodules  README.md  char_mapping.json  manual.json  pyproject.toml  sync_wiki.py  update.py  user-config.py
.github/workflows/: update.yml
output/: arcaea_story_data.lua  arcaea_story_en.lua  arcaea_story_ja.lua  arcaea_story_ko.lua  arcaea_story_zh-hans.lua  arcaea_story_zh-hant.lua  packlist  songlist  tl.json  unlocks
output/tl/: zh-Hans.po  zh-Hant.po
